- Improved ghosting time. Now Missiles should be less likely to self hit your own vehicle if moving.
- Removed old ghosting time convar. Useless at this point.

*r149
- Avoided serverside function being called on client realm when executing acf_enable_dp

*r150
- Updated the new armor analyzer. Added many new features.
- Fixed rounding values for RPMfunction in general.

*r151
- Reworked traces. Now bullets should hit the proper player hitbox. Courtesy of Cheezus
- Fixed APHE/CBC fuse. Not really precise but works now.
- Fixed sounds playing twice on SWEPs when watching another player shooting

*r152
- Added COLLISION_GROUP_VEHICLE as valid collision group for legality checks

*r153
- Fix ACF_CheckClips not respecting primitives.
- Added more primitive classes to the contraption entity finder.

*r154
- Added scalable ammo crates. credits for acf3 by the concept.
- Improved ammo config. Courtesy of KemGus
- Added new sweps: stinger, javelin & slam. Thanks RDC and cheezus.
- Added better sounds for the howitzer. Courtesy of HoloLight
- Improved radio fuze. Now it works with more guidances.
- Fixed many issues caused by invalid stuff to several entities (specially with acf3 entities)
- Missiles dimensions cannot be changed anymore.
- users cannot damage anything if they disabled their own perms.
- changed how ammo dims are calculated. Fixes issues where 2 crates with identical dims should have the same cap when it was not.
- Fixed several errors with missiles/bombs being bigger/smaller than they appear.
- Improved gun recoil stabilization. Courtesy of kerbalcadet
- godmoded ppl are not affected by tinnitus anymore.
- ace update should fail properly now, if theres no internet available. Courtesy of cheezus.

*r155
- Allowed even smaller crates.
- Fixed SPG-9 pod still having the wrong caliber.
- Brought back old legacy crate cursed dimensions.
- Added disclaimer regarding legacy crates.
- Minor restruct and bugfixes. Courtesy of kemgus.
- Removed javelin/stinger sweps.